# GOclient

./: .gitignore  CMakeLists.txt  README.md
entry/: dllmain.cpp
include/: client.h  modules.cpp  modules.h
src/: client.cpp
